force-app/main/default/objects/CLM_Rating_Layout__c/CLM_Rating_Layout__c.object-meta.xml
<CustomObject>
    <label>CLM Rating Layout</label>
    <nameField>
        <label>Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CLM Rating Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>