force-app/main/default/objects/CLM_Rating_Layout__c/fields/Account_Variant__c.field-meta.xml
<CustomField>
    <fullName>Account_Variant__c</fullName>
    <description>Whether this layout applies to HCP person accounts or HCO institution accounts.</description>
    <label>Account Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCP</fullName>
                <default>true</default>
                <label>HCP</label>
            </value>
            <value>
                <fullName>HCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>