force-app/main/default/objects/CLM_Rating_Layout__c/fields/Fields_JSON__c.field-meta.xml
<CustomField>
    <fullName>Fields_JSON__c</fullName>
    <label>Fields JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>