force-app/main/default/objects/CLM_Rating_Layout__c/fields/Team_Count__c.field-meta.xml
<CustomField>
    <fullName>Team_Count__c</fullName>
    <label>Team Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>