force-app/main/default/objects/CLM_Rating_Layout__c/fields/Territory_Count__c.field-meta.xml
<CustomField>
    <fullName>Territory_Count__c</fullName>
    <label>Territory Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>